--- a/CryptoLink.Domain/CryptoLink.Domain.csproj
+++ b/CryptoLink.Domain/CryptoLink.Domain.csproj
@@ -6,4 +6,16 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Aggregates\BookWords\Enums\" />
+    <Folder Include="Aggregates\LinkExtendeds\Enums\" />
+    <Folder Include="Common\Interfaces\" />
+  </ItemGroup>
+
+  <ItemGroup>
+	<PackageReference Include="ErrorOr" Version="2.0.1" />
+    <PackageReference Include="MediatR" Version="13.1.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.4" />
+  </ItemGroup>
+
 </Project>
