--- a/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -7,8 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CryptoLink.WebUI.Client\CryptoLink.WebUI.Client.csproj" />
+
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.20" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\CryptoLink.Application\CryptoLink.Application.csproj" />
+    <ProjectReference Include="..\..\CryptoLink.Architecture\CryptoLink.Architecture.csproj" />
+    <ProjectReference Include="..\..\CryptoLink.Domain\CryptoLink.Domain.csproj" />
   </ItemGroup>
 
 </Project>
