Auth file and repair namespace

--- a/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
@@ -15,6 +15,7 @@
     <ProjectReference Include="..\..\CryptoLink.Application\CryptoLink.Application.csproj" />
     <ProjectReference Include="..\..\CryptoLink.Architecture\CryptoLink.Architecture.csproj" />
     <ProjectReference Include="..\..\CryptoLink.Domain\CryptoLink.Domain.csproj" />
+    <ProjectReference Include="..\CryptoLink.WebUI.Client\CryptoLink.WebUI.Client.csproj" />
   </ItemGroup>
 
 </Project>
