--- a/CryptoLink.WebUI/CryptoLink.WebUI/appsettings.json
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/appsettings.json
@@ -5,5 +5,28 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Host=db;Port=5432;Database=cryptoLink;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Issuer": "",
+    "Audience": "",
+    "SecretKey": "",
+    "ValidFor": 0
+  },
+  "Password": {
+    "ExpiryInDays": 30,
+    "MinimumLength": 8
+  },
+  "Email": {
+    "ApiKeyPublic": "",
+    "ApiKeyPrivate": "",
+    "FromEmail": "",
+    "FromName": ""
+  },
+  "Url": {
+    "Frontend": "",
+    "Backend": ""
+  }
 }
