--- a/CryptoLink.WebUI/CryptoLink.WebUI/appsettings.Development.json
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/appsettings.Development.json
@@ -4,5 +4,28 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Default": "Host=localhost;Port=5432;Database=cryptoLink;Username=postgres;Password=postgres"
+  },
+  "Jwt": {
+    "Issuer": "issuer",
+    "Audience": "audience",
+    "SecretKey": "my-very-long-secret-key-which-should-be-at-least-32-characters-hehehehe",
+    "ValidFor": 1
+  },
+  "Password": {
+    "ExpiryInDays": 30,
+    "MinimumLength": 8
+  },
+  "Email": {
+    "ApiKeyPublic": "",
+    "ApiKeyPrivate": "",
+    "FromEmail": "",
+    "FromName": ""
+  },
+  "Url": {
+    "Frontend": "http://localhost:3000",
+    "Backend": "http://localhost:5043"
   }
 }
