repair appsetuings docker compose

--- a/CryptoLink.WebUI/CryptoLink.WebUI/appsettings.Development.json
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/appsettings.Development.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Host=localhost;Port=5432;Database=cryptoLink;Username=postgres;Password=postgres"
+    "Default": "Host=localhost;Port=5432;Database=cryptolink;Username=postgres;Password=postgres"
   },
   "Jwt": {
     "Issuer": "issuer",
