--- a/CryptoLink.WebUI/CryptoLink.WebUI/appsettings.json
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "Host=db;Port=5432;Database=cryptoLink;Username=postgres;Password=postgres"
+    "Default": "Host=localhost;Port=5432;Database=cryptolink;Username=postgres;Password=postgres"
   },
   "Jwt": {
     "Issuer": "",
