--- a/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
@@ -10,6 +10,11 @@
   <ItemGroup>
 
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.20" />
+
+	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
