--- a/CryptoLink.Architecture/CryptoLink.Architecture.csproj
+++ b/CryptoLink.Architecture/CryptoLink.Architecture.csproj
@@ -27,6 +27,7 @@
 	<PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.11" />
 	<PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.4" />
 	<PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
+	<PackageReference Include="PgpCore" Version="6.5.3" />
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.7.0" />
   </ItemGroup>
 
