--- a/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
@@ -15,6 +15,8 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
+
+	  <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="10.1.0" />
   </ItemGroup>
 
   <ItemGroup>
