--- a/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
+++ b/CryptoLink.WebUI/CryptoLink.WebUI/CryptoLink.WebUI.csproj
@@ -9,6 +9,8 @@
 
   <ItemGroup>
 
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="8.0.14" />
+
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.20" />
 
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.11">
