--- a/CryptoLink.Architecture/CryptoLink.Architecture.csproj
+++ b/CryptoLink.Architecture/CryptoLink.Architecture.csproj
@@ -14,6 +14,7 @@
 	
   <ItemGroup>
 	  <PackageReference Include="Mailjet.Api" Version="3.0.0" />
+	  <PackageReference Include="Microsoft.AspNetCore.DataProtection.EntityFrameworkCore" Version="8.0.22" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="9.0.11" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.11">
 		  <PrivateAssets>all</PrivateAssets>
