--- a/kubernetes/02-postgres-secret.yaml
+++ b/kubernetes/02-postgres-secret.yaml
@@ -6,7 +6,6 @@ metadata:
   namespace: cryptolink-app
 type: Opaque
 stringData:
-  # WAŻNE: Te wartości zostaną nadpisane przez sekrety z GitHub Actions
-  # podczas wdrożenia przez pipeline CI/CD.
+  # IMPORTANT: These values will be overwritten by GitHub Actions secrets during CI/CD deployment
   POSTGRES_USER: "azureuser"
   POSTGRES_PASSWORD: "your-postgres-password" 
