Update branches for deployment workflow

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy CryptoLink to AKS
 
 on:
   push:
-    branches: [ main ]
+    branches: [ master, cicd_kubernetes ]
   workflow_dispatch:
 
 env:
