--- a/CryptoLink.WebUI/CryptoLink.WebUI.Client/CryptoLink.WebUI.Client.csproj
+++ b/CryptoLink.WebUI/CryptoLink.WebUI.Client/CryptoLink.WebUI.Client.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Pages\BookWords\" />
+  </ItemGroup>
+
 </Project>
