added health check to program.cs

--- a/kubernetes/05-app-deployment.yaml
+++ b/kubernetes/05-app-deployment.yaml
@@ -60,3 +60,19 @@ spec:
             secretKeyRef:
               name: cryptolink-app-secrets
               key: ConnectionStrings__Default
+        livenessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 30
+          periodSeconds: 10
+          timeoutSeconds: 5
+          failureThreshold: 3
+        readinessProbe:
+          httpGet:
+            path: /health
+            port: 8080
+          initialDelaySeconds: 15
+          periodSeconds: 5
+          timeoutSeconds: 3
+          failureThreshold: 3
