--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -149,6 +149,7 @@ jobs:
         namespace: 'cryptolink-app'
         manifests: |
           kubernetes/00-namespace.yaml
+          kubernetes/07-service-account.yaml
           kubernetes/03-postgres-statefulset.yaml
           kubernetes/04-postgres-service.yaml
           kubernetes/05-app-deployment.yaml
