--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -113,26 +113,28 @@ jobs:
 
     # === TU JEST KLUCZOWA ZMIANA ===
     - name: Generate All Secrets
+      env:
+        # Przekazujemy hasło jako zmienną środowiskową do powłoki
+        DB_PASSWORD: ${{ secrets.POSTGRES_ADMIN_PASSWORD }}
       run: |
         # Tworzymy namespace
         kubectl create namespace cryptolink-app --dry-run=client -o yaml | kubectl apply -f -
 
         # 1. SEKRET DLA BAZY DANYCH (POSTGRES)
-        # Ustawiamy dedykowanego użytkownika aplikacji (least privilege - nie admin!)
+        # Używamy zmiennej $DB_PASSWORD
         kubectl create secret generic postgres-secret \
           --namespace cryptolink-app \
-          --from-literal=POSTGRES_USER="cryptolink_app" \
-          --from-literal=POSTGRES_PASSWORD="${{ secrets.POSTGRES_APP_PASSWORD }}" \
+          --from-literal=POSTGRES_USER="postgres" \
+          --from-literal=POSTGRES_PASSWORD="$DB_PASSWORD" \
           --dry-run=client -o yaml | kubectl apply -f -
 
         # 2. SEKRET DLA APLIKACJI (CONNECTION STRING)
-        # Musi pasować do tego powyżej!
-        # Host=postgres-db-service (zgodnie z Twoim plikiem 04-postgres-service.yaml)
-        # Database=cryptolink (zgodnie z Twoim plikiem 03-postgres-statefulset.yaml -> env: POSTGRES_DB)
-        # Uwaga: Używamy dedykowanego użytkownika cryptolink_app, nie postgres!
+        # Budujemy string w zmiennej, żeby uniknąć problemów z Ballem i średnikami
+        CONN_STRING="Host=postgres-db-service;Port=5432;Database=cryptolink;Username=postgres;Password=$DB_PASSWORD"
+        
         kubectl create secret generic cryptolink-app-secrets \
           --namespace cryptolink-app \
-          --from-literal=ConnectionStrings__Default="Host=postgres-db-service;Port=5432;Database=cryptolink;Username=cryptolink_app;Password=${{ secrets.POSTGRES_APP_PASSWORD }}" \
+          --from-literal=ConnectionStrings__Default="$CONN_STRING" \
           --dry-run=client -o yaml | kubectl apply -f -
 
         # 3. SEKRETY JWT
