--- a/CryptoLink.WebUI/CryptoLink.WebUI.Client/CryptoLink.WebUI.Client.csproj
+++ b/CryptoLink.WebUI/CryptoLink.WebUI.Client/CryptoLink.WebUI.Client.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="8.0.20" />
+    <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="8.0.20" />
     <PackageReference Include="Microsoft.Extensions.Http" Version="10.0.1" />
   </ItemGroup>
 
