--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -144,6 +144,16 @@ jobs:
           --from-literal=Jwt__SecretKey="${{ secrets.JWT_SECRET_KEY }}" \
           --dry-run=client -o yaml | kubectl apply -f -
 
+    - name: 'Auto-Fix Permissions for Dynamic ACR'
+      uses: azure/CLI@v1
+      with:
+        inlineScript: |
+          echo "Nadawanie uprawnień dla klastra ${{ env.AKS_CLUSTER_NAME }} do rejestru ${{ env.ACR_NAME }}..."
+          az aks update \
+            --name ${{ env.AKS_CLUSTER_NAME }} \
+            --resource-group ${{ secrets.RESOURCE_GROUP }} \
+            --attach-acr ${{ env.ACR_NAME }}
+
     - name: 'Deploy to AKS'
       uses: Azure/k8s-deploy@v4
       with:
