Limit deployment branches in deploy.yml
Restrict deployment branches to only 'master'.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -2,7 +2,7 @@ name: Build and Deploy CryptoLink to AKS
 
 on:
   push:
-    branches: [ master, cicd_kubernetes ]
+    branches: [ master ]
   workflow_dispatch:
 
 env:
